Wed Aug  4 13:10:21 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tao/SystemException.cpp:
          Renamed TAO_SKIP_NEW_LINE_IN_EXCEPTION_LOGGING to
          TAO_SUPPRESS_NEW_LINE_IN_EXCEPTION_LOGGING.

Wed Aug  4 12:21:58 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tao/SystemException.cpp:
          Added TAO_SKIP_NEW_LINE_IN_EXCEPTION_LOGGING define. When set,
          no newline character will occur in the exception logging and therefor
          all logging will appear on one line.

Wed Aug  4 08:41:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
          Fixed compile errors

Tue Aug  3 14:48:42 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Environment.cpp:

          Added Id string.

        * tao/Object.inl:
        * tao/Valuetype/AbstractBase.inl:

          Replace 'inline' with 'ACE_INLINE'.

        * TAO_IDL/be/be_visitor_argument/argument.cpp:

          Added missing final newline.

Tue Aug  3 14:17:23 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Exposed_Policies/Policy_Verifier.cpp:
          Fixed memory leaks.

Tue Aug  3 13:59:58 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/any_op_ch.cpp:
        * TAO_IDL/be/be_visitor_component/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_component/component_ch.cpp:
        * TAO_IDL/be/be_visitor_component/component_ci.cpp:
        * TAO_IDL/be/be_visitor_component/cdr_op_ch.cpp:
        * TAO_IDL/be/be_visitor_component/component_cs.cpp:
        * TAO_IDL/be/be_visitor_component/cdr_op_cs.cpp:
        * TAO_IDL/be_include/be_visitor_component/cdr_op_cs.h:
        * TAO_IDL/be_include/be_visitor_component/any_op_ch.h:
        * TAO_IDL/be_include/be_visitor_component/any_op_cs.h:
        * TAO_IDL/be_include/be_visitor_component/component_ch.h:
        * TAO_IDL/be_include/be_visitor_component/component_ci.h: