@@ -1,3 +1,9 @@
+Wed Aug  4 14:43:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/Notify/XML_Loader.h:
+        * orbsvcs/orbsvcs/Notify/XML_Loader.cpp:
+          Fixed compile errors
+
 Wed Aug  4 13:10:21 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * tao/SystemException.cpp:
